Closed Bug 1714459 Opened 4 years ago Closed 4 years ago

Perma [Tier2] /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:780:7: error: use of undeclared identifier '__NR__llseek'

Categories

(Core :: Security: Process Sandboxing, defect, P5)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: gerard-majax)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=341678451&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SRAfJTrbRKO6VYFWRJmTRw/runs/0/artifacts/public/logs/live_backing.log


[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -  In file included from Unified_cpp_sandbox_linux3.cpp:20:
[task 2021-06-03T21:10:23.912Z] 21:10:23    ERROR -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:780:7: error: use of undeclared identifier '__NR__llseek'
[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -        CASES_FOR_lseek:
[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -        ^
[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilterUtil.h:118:10: note: expanded from macro 'CASES_FOR_lseek'
[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -      case __NR__llseek
[task 2021-06-03T21:10:23.912Z] 21:10:23     INFO -           ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  In file included from Unified_cpp_sandbox_linux3.cpp:20:
[task 2021-06-03T21:10:23.913Z] 21:10:23    ERROR -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:786:7: error: duplicate case value '46'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -        CASES_FOR_ftruncate:
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -        ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilterUtil.h:121:10: note: expanded from macro 'CASES_FOR_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -      case __NR_ftruncate64
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -           ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/checkouts/gecko/security/sandbox/chromium/sandbox/linux/system_headers/arm64_linux_syscalls.h:1305:26: note: expanded from macro '__NR_ftruncate64'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  #define __NR_ftruncate64 __NR_ftruncate
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -                           ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/fetches/sysroot/usr/include/asm-generic/unistd.h:758:24: note: expanded from macro '__NR_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  #define __NR_ftruncate __NR3264_ftruncate
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -                         ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/fetches/sysroot/usr/include/asm-generic/unistd.h:159:28: note: expanded from macro '__NR3264_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  #define __NR3264_ftruncate 46
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -                             ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:786:7: note: previous case defined here
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilterUtil.h:120:10: note: expanded from macro 'CASES_FOR_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -      case __NR_ftruncate:      \
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -           ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/fetches/sysroot/usr/include/asm-generic/unistd.h:758:24: note: expanded from macro '__NR_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  #define __NR_ftruncate __NR3264_ftruncate
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -                         ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  /builds/worker/fetches/sysroot/usr/include/asm-generic/unistd.h:159:28: note: expanded from macro '__NR3264_ftruncate'
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  #define __NR3264_ftruncate 46
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -                             ^
[task 2021-06-03T21:10:23.913Z] 21:10:23     INFO -  In file included from Unified_cpp_sandbox_linux3.cpp:20:
Summary: Intermittent [Tier2] /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:780:7: error: use of undeclared identifier '__NR__llseek' → Perma [Tier2] /builds/worker/checkouts/gecko/security/sandbox/linux/SandboxFilter.cpp:780:7: error: use of undeclared identifier '__NR__llseek'
Flags: needinfo?(lissyx+mozillians)
Regressed by: 1713776
Has Regression Range: --- → yes
Flags: needinfo?(lissyx+mozillians)
Assignee: nobody → lissyx+mozillians
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1713776

Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4d0faa8fbba8 Remove duplicated linux/arm64 syscalls definitions r=gcp
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
Blocks: 1715461
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: