Bug 1714459 - Remove duplicated linux/arm64 syscalls definitions r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D116827